--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/react-icons": "^2.2.7",
     "framer-motion": "^12.15.0",
     "js-cookie": "^3.0.5",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5"
   },
